--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Body and background settings */
 body {
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    background: #E7FBB4;
     height: 100vh;
     display: flex;
     justify-content: center;
