--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Body and background settings */
 body {
     font-family: 'Roboto', sans-serif;
-    background: #E7FBB4;
+    background: #E7FBB4 !important;
     height: 100vh;
     display: flex;
     justify-content: center;
