--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
     border: none;
     padding: 15px 30px;
     font-size: 1.2em;
-    color: white;
+    color: #000000;
     border-radius: 25px;
     cursor: pointer;
     transition: background 0.3s;
