--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #000000;
     overflow: hidden;
 }
 
